# scrollr_rust_backend

./: .env.example  .gitignore  Cargo.toml  README.md  start.sh
finance_service/: Cargo.toml
finance_service/src/: lib.rs  types.rs  websocket.rs
scrollr_backend/: Cargo.toml
scrollr_backend/src/: lib.rs  main.rs
sports_service/: Cargo.toml
sports_service/src/: lib.rs  types.rs
utils/: Cargo.toml
utils/src/: lib.rs  log.rs
utils/src/database/: fantasy.rs  finance.rs  mod.rs  sports.rs
yahoo_fantasy/: Cargo.toml
yahoo_fantasy/src/: api.rs  error.rs  lib.rs  stats.rs  types.rs  xml_leagues.rs  xml_roster.rs  xml_standings.rs  xml_types.rs
