[package]
name = "finance_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"]}
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
anyhow = "1.0"
serde_json = "1.0"
reqwest = "0.12"

utils = { path = "../utils", features = ["finance"]}