[package]
name = "scrollr_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
futures-util = "0.3"
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }

finance_service = { path = "../finance_service" }
sports_service = { path = "../sports_service" }
utils = { path = "../utils" }