[package]
name = "scrollr_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
futures-util = "0.3"
axum = { version = "0.8", features = ["macros", "json"] }
axum-extra = { version = "0.12", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls-acme = { version = "0.8", features = ["axum"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower-http = { version = "0.6", features = ["set-header"] }

finance_service = { path = "../finance_service" }
sports_service = { path = "../sports_service" }
yahoo_fantasy = { path = "../yahoo_fantasy" }
utils = { path = "../utils" }