[package]
name = "sports_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

utils = { path = "../utils", features = ["sports"]}