[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
tokio = { version = "1.48", features = ["sync"] }
chrono = "0.4"
sqlx = {version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono"]}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
magic-crypt = "4.0"
oauth2 = "5.0"

[features]
finance = []
sports = []
fantasy = []

